<resources>
    <string name="app_name">Messenger App</string>
    <string name="title_activity_item_list">ItemList</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="textview">TextView</string>
    <string name="text_view2">TextView</string>
    <string name="hello">Hello</string>
    <string name="search">Search</string>
    <string name="search_title">search</string>
    <string name="hint">hint</string>
    <string name="message">Message</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button">Button</string>
    <string name="send">Send</string>
    <string name="plus">+</string>
    <string name="imagemessage">ImageMessage</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="app_logo">app_logo</string>
    <string name="log_in">Log In</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">sign up</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="reset">Reset</string>
    <string name="sign_out">Sign out</string>
    <string name="password_reset">Password reset</string>
    <string name="googlelogin">GoogleLogIn</string>
    <string name="facebook_app_id">609588533518320</string>
    <string name="fb_login_protocol_scheme">fb609588533518320</string>

</resources>